# telegram_bot

./: .gitignore  README.md  pyproject.toml  vector_db.py  vector_search.py
