[project]
name = "telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"  # Ограничиваем, чтобы избежать Python 3.14
dependencies = [
    "ipykernel>=7.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "sentence-transformers>=5.5.1",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu124" },
    ],
]